# corrector

./: .travis.yml  CMakeLists.txt  Readme.md
include/iface/: spell_checker.h
src/: CMakeLists.txt  spell_checker_impl.cpp  spell_checker_impl.h
test/: CMakeLists.txt  main.cpp  ru.txt  tests.cpp  unittest.cmake
